observability/prometheus/kustomize/overlays/base/rendered/kube-prometheus-stack/templates/alertmanager/route.yaml
---
# Source: kube-prometheus-stack/templates/alertmanager/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kube-prometheus-stack-alertmanager
  namespace: monitoring
  labels:
    app: kube-prometheus-stack-alertmanager
    
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: kube-prometheus-stack
    app.kubernetes.io/version: "87.18.1"
    app.kubernetes.io/part-of: kube-prometheus-stack
    chart: kube-prometheus-stack-87.18.1
    release: "kube-prometheus-stack"
    heritage: "Helm"
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - prometheus.local
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          weight: 1
          name: kube-prometheus-stack-alertmanager
          port: 9093
      matches:
        - path:
            type: PathPrefix
